--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,26 +1,27 @@
-name: Streamlit Application
-
-on: [push, pull_request]
-
+# This workflow will install Python dependencies, run tests and lint with a single version of Python
+# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python
+name: Python application
+on:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+permissions:
+  contents: read
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Python
-      uses: actions/setup-python@v2
+    - uses: actions/checkout@v4
+    - name: Set up Python 3.13.1
+      uses: actions/setup-python@v3
       with:
-        python-version: '3.13.1'  # ou a versão que você está usando
-
+        python-version: "3.13.1"
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
+        pip install flake8 pytest
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Run Streamlit
       run: |
         streamlit run src/train.py
